#284639 - Task - Description not shown for closed cases

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1470,7 +1470,7 @@
                                                     }
                                                     else
                                                     {
-                                                        <div id="textDescriptionOuter" style="width: 648px; visibility: hidden">
+                                                        <div id="textDescriptionOuter" style="width: 648px;">
                                                             @Html.TextAreaFor(model => model.case_.Description, new { @class = "case-description summernotedesc", @readonly = true })
                                                         </div>
                                                     }
