--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
@@ -403,7 +403,7 @@
                                 </li>
                                 <li class="divider"></li>
                                 <li>
-                                    <a href="@Url.Action("Logout", "Login", new { area = "" })">
+                                    <a href="@Url.Action("Logout", "Login", new { area = "" })" id="btnUserLogout">
                                         <i class="icon-off"></i>
                                         @Translation.Get("Logga ut")
                                     </a>
